fix: don't wrap "open file" button

--- a/src/choose-file/style.css
+++ b/src/choose-file/style.css
@@ -3,6 +3,7 @@
     align-items: center;
     padding: 4px;
     cursor: pointer;
+    white-space: nowrap;
 }
 
 :local .button {
